--- a/css/sass/components/_var.scss
+++ b/css/sass/components/_var.scss
@@ -1,7 +1,7 @@
 //color
-$main-color: #39b3f1;
-$main-color2:#e6f8fe;
-$text-color:#3b474b;
+$main-color: #c3dbdb;
+$main-color2:#b4d3d3;
+$text-color:#1a1a1d;
 $white-color:#fff;
 
 //media var
