--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -15,8 +15,8 @@ $dir:ltr;
 
 
 //layout
-@import './layout/header',
-		'./layout/nav',
+@import './layout/nav',
+		'./layout/header',
 		'./layout/main',
 		'./layout/footer';
 		
