--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -1,3 +1,175 @@
+/*======================
+====== start header =======
+======================*/
 header
 {
+	position: relative;
+	min-height:500px;
+	height:500px;
+	height:100vh;
+	background-color: $white-color;
+	overflow: hidden;
+	.top-bar
+	{
+		display: flex;
+		height:75%;
+	    height: 75vh;
+	    align-items: flex-start;
+	}
+	.search
+	{
+		flex: 1 0 auto;
+	    padding: 0.5em 1em;
+	    background-color: $main-color;
+	    display: flex;
+	    height: 100%;
+	}
+	.slider
+	{
+		height:50%;
+	    height: 50vh;
+	    top: -25%;
+	    top: -25vh;
+	    position: relative;
+	    z-index: 99;
+	}
+	.carousel
+	{
+		display: inline-block;
+	    width:75%;
+	    height: 100%;
+	}
+	.carousel-item
+	{
+	    height: 100%;
+		figure
+		{
+			width: 75%;
+		    position: relative;
+		    height: 100%;
+		    display: block;
+		    img
+		    {
+		    	width: 100%;
+			    height: 100%;
+		    }
+		}
+		figcaption
+		{
+			position: absolute;
+		    top: 40%;
+		    left: -50px;
+		}
+	    .socal-links
+		{
+			position: relative;
+			flex: 1 0 auto;
+			.list-group-item
+			{
+				background: none;
+				font-size: 1em;
+    			border: none;
+    			padding: 0.5em 1em;
+			}
+			.item-number
+			{
+				transform: rotate(-90deg) translate(0,-200%);
+    			padding: 0.5em 1em;
+    			&:after
+    			{
+    				content: "";
+				    width: 50px;
+				    height: 2px;
+				    background-color: $text-color;
+				    display: inline-block;
+				    vertical-align: middle;
+    			}
+			}
+			.view-profile
+			{
+			    position: absolute;
+			    bottom: -1px;
+			    width: 100%;
+			    height: 50px;
+			    left: 0;
+			    z-index: 99;
+			    padding: 0;
+			    border-radius: 0;
+			    margin: 0;
+			    span
+			    {
+			    	background-color: $main-color2;
+				    display: inline-block;
+			    	width: 100%;
+				    height: 100%;
+				    line-height: 50px;
+				    color:$white-color;
+			    }
+			    &:after
+			    {
+			    	content: "\f04b";
+				    width: 50%;
+				    height: 100%;
+				    background-color: $white-color;
+				    margin-left: -5px;
+				    vertical-align: top;
+				    display: inline-block;
+				    font: normal normal normal 14px/1 FontAwesome;
+				    padding-top:15px;
+				    font-size: 24px;
+				    text-rendering: auto;
+				    -webkit-font-smoothing: antialiased;
+				    -moz-osx-font-smoothing: grayscale;
+			    }
+			}
+		}
+	}
+	.carousel-dota
+	{
+	    width: 24%;
+	    display: inline-block;
+	    height: 100%;
+	    vertical-align: top;
+	    position: relative;
+	}
+	.carousel-indicators
+	{
+		display: block;
+		margin:0;
+		padding-left:2em;
+		li
+		{
+			text-indent:0px;
+			margin: 1em 0;
+			width: auto;
+    		height: auto;
+    		background: none;
+    		cursor: pointer;
+			color: $text-color;
+			&.active
+			{
+    			background: none;
+			}
+			&:after,
+			&:before
+			{
+				display:none;
+				position: static;
+			}
+			&.active:after
+			{
+				display:inline-block;
+    			background: none;
+				width: 20%;
+			    height: 2px;
+			    margin-left:20px;
+			    background-color: $text-color;
+			    vertical-align: middle;
+			}
+		}
+	}
+
 }
+/*======================
+====== end header =======
+======================*/
