--- a/css/sass/layout/_nav.scss
+++ b/css/sass/layout/_nav.scss
@@ -1,3 +1,76 @@
+/*======================
+====== start nav =======
+======================*/
 nav
 {
+	width:65%;
+	flex: 0 0 65%;
+    height: 100%;
+    .navbar-toggler
+    {
+    	width:60px;
+    	margin-right: 1em;
+    	border: none;
+    	.toggler-icon,
+    	&:before,
+    	&:after
+    	{
+    		content: "";
+		    width: 100%;
+		    height: 2px;
+		    display: block;
+		    background-color: rgba($text-color,0.5);
+		    margin: 8px 0;
+		    opacity: 1;
+		    transform: rotate(0) translate(0);
+	    	will-change:transform;
+	    	transition:transform 0.3s linear,opacity 0.3s ease;
+		}
+		&[aria-expanded='true']
+		{
+			.toggler-icon
+			{
+				opacity: 0;
+			}
+			&:before
+			{
+				transform: rotate(45deg) translate(7px, 7px);
+			}
+			&:after
+			{
+				transform: rotate(-45deg) translate(7px, -7px);
+			}
+		}
+    }
+    .navbar-items
+    {
+    	flex: 1 0 auto;
+    }
+    .nav-item
+    {
+    	padding: 0 1em;
+    }
+    .navbar-collapse
+    {
+        background-color: $white-color;
+    	position: absolute;
+	    top: 65px;
+	    left: auto;
+	    z-index: 999;
+    	box-shadow: 0px 0px 10px 2px rgba($text-color, 0.3);
+    	transform: scale(0);
+    	will-change:transform;
+    	transition:transform 0.5s cubic-bezier(1, 2, 0, -0.5);
+    	&.show
+    	{
+    		transform: scale(1);
+    	}
+    	.nav-item
+    	{
+    		padding: 10px 1em;
+    	}
+    }
 }
+/*======================
+====== end nav =======
+======================*/
