--- a/css/sass/components/_typography.scss
+++ b/css/sass/components/_typography.scss
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:700|Raleway');
 %fontfamily
 {
     font-family: 'Raleway', sans-serif;
 }
 %fontheading
 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Amaranth', sans-serif;
 }
 html, body
 {
