--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -9,6 +9,11 @@ header
 	height:100vh;
 	background-color: $white-color;
 	overflow: hidden;
+	.navbar-brand
+	{
+		font-size:1.5rem;
+		text-transform: uppercase;
+	}
 	.top-bar
 	{
 		display: flex;
@@ -41,7 +46,18 @@ header
 	}
 	.carousel-item
 	{
+		position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: 9;
+	    opacity: 0;
 	    height: 100%;
+	    transition:opacity 0.3s ease-in-out;
+	    &.active
+	    {
+	    	opacity: 1;
+	    	z-index: 99;
+	    }
 		figure
 		{
 			width: 75%;
@@ -57,33 +73,41 @@ header
 		figcaption
 		{
 			position: absolute;
-		    top: 40%;
+		    top: 25%;
 		    left: -50px;
+		    color:$main-color;
+		    h2
+		    {
+		    	margin-bottom:10px;
+		    }
 		}
 	    .socal-links
 		{
 			position: relative;
 			flex: 1 0 auto;
+			.line
+			{
+				display: block;
+			    width: 2px;
+			    height: 33px;
+			    background-color: $text-color;
+			    margin-left: 1.5em;
+			    margin-top: 1em;
+			}
+			&:after
+			{
+				content: attr(data-number);
+			    padding: 0.5em 1em;
+			    transform: rotate(-90deg);
+			    display: inline-block;
+			    @extend %fontheading; 
+			}
 			.list-group-item
 			{
 				background: none;
 				font-size: 1em;
     			border: none;
     			padding: 0.5em 1em;
-			}
-			.item-number
-			{
-				transform: rotate(-90deg) translate(0,-200%);
-    			padding: 0.5em 1em;
-    			&:after
-    			{
-    				content: "";
-				    width: 50px;
-				    height: 2px;
-				    background-color: $text-color;
-				    display: inline-block;
-				    vertical-align: middle;
-    			}
 			}
 			.view-profile
 			{
@@ -146,6 +170,7 @@ header
     		background: none;
     		cursor: pointer;
 			color: $text-color;
+			letter-spacing: 5px;
 			&.active
 			{
     			background: none;
