--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -43,6 +43,7 @@ header
 		display: inline-block;
 	    width:75%;
 	    height: 100%;
+	    overflow: hidden;
 	}
 	.carousel-item
 	{
@@ -50,13 +51,17 @@ header
 	    top: 0;
 	    left: 0;
 	    z-index: 9;
-	    opacity: 0;
 	    height: 100%;
-	    transition:opacity 0.3s ease-in-out;
+	    transform: translate(-100%);
+	    transition:transform 0.3s ease-in-out;
 	    &.active
 	    {
-	    	opacity: 1;
+	    	transform: translate(0);
 	    	z-index: 99;
+	    	& ~ .carousel-item
+	    	{
+	    		transform: translate(100%);
+	    	}
 	    }
 		figure
 		{
