--- a/css/sass/layout/main/_clients.scss
+++ b/css/sass/layout/main/_clients.scss
@@ -6,9 +6,13 @@
         color: rgba($text-color,0.5);
         transition:color 0.2s ease,border 0.2s ease;
 		text-transform: uppercase;
-		&:hover
+		border-bottom-width: 1px;
+		border-bottom-style: solid;
+		border-bottom-color: transparent;
+		&:hover,
+		&.active
 		{
-			border-bottom: 1px solid $text-color;
+			border-bottom-color: $text-color;
 			color:$text-color;
 		}
 		button
@@ -16,5 +20,70 @@
 			text-transform: inherit;
 			color: inherit;
 		}
+	}
+	figure
+	{
+	    position: relative;
+	    margin: 0;
+	    img
+	    {
+	    	height: 250px;
+	    }
+	    &:hover
+	    {
+			figcaption
+			{
+	    		opacity: 1;
+			}
+
+	    }
+	}
+	figcaption
+	{
+		background-color: rgba($main-color2,0.5);
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    height: 100%;
+	    width: 100%;
+	    text-align: right;
+	    padding: 1em;
+	    opacity: 0;
+        transition:opacity 0.3s ease-in-out;
+	}
+	.client-link
+	{
+		display: inline-block;
+	    border-radius: 50%;
+	    background-color: $white-color;
+	    color:$text-color;
+	    padding: 8px 12px;
+	    transform: rotate(-45deg);
+	}
+	.client-title
+	{
+		text-align: center;
+	    position: absolute;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    top: auto;
+	    width: 100%;
+	    padding: 1em;
+	    color:$white-color;
+	    h4
+	    {
+	    	margin-bottom: 5px;
+	    }
+	}
+	.btn
+	{
+		margin: 0 auto;
+	    display: block;
+	    margin-top: 50px;
+	    border-radius: 25px;
+	    padding: 0.5em 1em;
 	}
 }
