--- a/css/sass/module/grid_moduel/_grid.scss
+++ b/css/sass/module/grid_moduel/_grid.scss
@@ -1,7 +1,7 @@
 //defulat var for grid
 $grid: 12;
-$grid-map: (sm,mid,lg,xlg);
-$grid-media: ($max_sm,$max_mid,$max_lg,$max_xlg);
+$grid-map: (xlg,lg,mid,sm);
+$grid-media: ($max_xlg,$max_lg,$max_mid,$max_sm);
 //grid class
 .warpper
 {
