prefix mixin used

--- a/css/sass/form/_button.scss
+++ b/css/sass/form/_button.scss
@@ -1,11 +1,17 @@
+/*======================
+====== start buttons style =======
+======================*/
 .btn-primary
 {
 	color: $white-color;
     background-color: $main-color2;
     border:none;
-    transition:background 0.2s ease;
+    @include transition(background 0.2s ease);
     &:hover
     {
     	background-color: $text-color;
     }
 }
+/*======================
+====== end buttons style =======
+======================*/
