--- a/css/sass/media/_media.scss
+++ b/css/sass/media/_media.scss
@@ -7,5 +7,5 @@
 @import './media_mid/_min_768';
 @import './media_lg/_min_992';
 @import './media_xlg/_min_1200';
-@import '_print';
+//@import '_print';
 /* end media style */
