--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 /*=== start default style */
 * {
   -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
@@ -52,7 +53,13 @@ html, body {
   font-family: "Raleway", sans-serif;
 }
 
-header .carousel-item .socal-links:after, nav .nav-item, h1, h2, h3, h4, h5, h6, .h-style {
+header .carousel-item .socal-links:after, nav .nav-item, h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h-style {
   font-family: "Amaranth", sans-serif;
 }
 
@@ -69,7 +76,13 @@ p {
   line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6, .h-style {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h-style {
   font-weight: bold;
   margin: 0;
   line-height: 1.3;
@@ -116,6 +129,9 @@ h6 {
 ======================*/
 nav {
   width: 65%;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 65%;
+  -ms-flex: 0 0 65%;
   flex: 0 0 65%;
   height: 100%;
 }
@@ -131,21 +147,42 @@ nav .navbar-toggler .toggler-icon, nav .navbar-toggler:before, nav .navbar-toggl
   display: block;
   background-color: rgba(26, 26, 29, 0.5);
   margin: 4px 0;
-  opacity: 1;
-  transform: rotate(0) translate(0);
   will-change: transform;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: rotate(0) translate(0);
+  -o-transform: rotate(0) translate(0);
+  -moz-transform: rotate(0) translate(0);
+  -ms-transform: rotate(0) translate(0);
+  transform: rotate(0) translate(0);
+  -webkit-transition: transform 0.3s linear, opacity 0.3s ease;
+  -o-transition: transform 0.3s linear, opacity 0.3s ease;
+  -moz-transition: transform 0.3s linear, opacity 0.3s ease;
+  -ms-transition: transform 0.3s linear, opacity 0.3s ease;
   transition: transform 0.3s linear, opacity 0.3s ease;
 }
 nav .navbar-toggler[aria-expanded=true] .toggler-icon {
   opacity: 0;
+  filter: alpha(opacity=0);
 }
 nav .navbar-toggler[aria-expanded=true]:before {
+  -webkit-transform: rotate(45deg) translate(3px, 4px);
+  -o-transform: rotate(45deg) translate(3px, 4px);
+  -moz-transform: rotate(45deg) translate(3px, 4px);
+  -ms-transform: rotate(45deg) translate(3px, 4px);
   transform: rotate(45deg) translate(3px, 4px);
 }
 nav .navbar-toggler[aria-expanded=true]:after {
+  -webkit-transform: rotate(-45deg) translate(5px, -6px);
+  -o-transform: rotate(-45deg) translate(5px, -6px);
+  -moz-transform: rotate(-45deg) translate(5px, -6px);
+  -ms-transform: rotate(-45deg) translate(5px, -6px);
   transform: rotate(-45deg) translate(5px, -6px);
 }
 nav .navbar-items {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
   flex: 1 0 auto;
 }
 nav .nav-item {
@@ -154,6 +191,10 @@ nav .nav-item {
   font-size: 1rem;
   text-transform: uppercase;
   color: rgba(26, 26, 29, 0.5);
+  -webkit-transition: color 0.2s ease;
+  -o-transition: color 0.2s ease;
+  -moz-transition: color 0.2s ease;
+  -ms-transition: color 0.2s ease;
   transition: color 0.2s ease;
 }
 nav .nav-item:hover {
@@ -165,12 +206,28 @@ nav .navbar-collapse {
   top: 65px;
   left: auto;
   z-index: 999;
-  box-shadow: 0px 0px 10px 2px rgba(26, 26, 29, 0.3);
-  transform: scale(0);
   will-change: transform;
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(26, 26, 29, 0.3);
+  -o-box-shadow: 0px 0px 10px 2px rgba(26, 26, 29, 0.3);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(26, 26, 29, 0.3);
+  -ms-box-shadow: 0px 0px 10px 2px rgba(26, 26, 29, 0.3);
+  box-shadow: 0px 0px 10px 2px rgba(26, 26, 29, 0.3);
+  -webkit-transform: scale(0);
+  -o-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
+  -o-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
+  -moz-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
+  -ms-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
   transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
 }
 nav .navbar-collapse.show {
+  -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
   transform: scale(1);
 }
 nav .navbar-collapse .nav-item {
@@ -196,16 +253,16 @@ header .navbar-brand {
   text-transform: uppercase;
 }
 header .top-bar {
-  display: flex;
   height: 75%;
-  align-items: flex-start;
 }
 header .search {
-  flex: 1 0 auto;
   padding: 0.5em 1em;
   background-color: #c3dbdb;
-  display: flex;
   height: 100%;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 header .slider {
   height: 50%;
@@ -225,14 +282,30 @@ header .carousel-item {
   left: 0;
   z-index: 9;
   height: 100%;
+  -webkit-transform: translate(-100%);
+  -o-transform: translate(-100%);
+  -moz-transform: translate(-100%);
+  -ms-transform: translate(-100%);
   transform: translate(-100%);
+  -webkit-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -ms-transition: transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
 }
 header .carousel-item.active {
-  transform: translate(0);
   z-index: 99;
+  -webkit-transform: translate(0);
+  -o-transform: translate(0);
+  -moz-transform: translate(0);
+  -ms-transform: translate(0);
+  transform: translate(0);
 }
 header .carousel-item.active ~ .carousel-item {
+  -webkit-transform: translate(100%);
+  -o-transform: translate(100%);
+  -moz-transform: translate(100%);
+  -ms-transform: translate(100%);
   transform: translate(100%);
 }
 header .carousel-item figure {
@@ -258,6 +331,9 @@ header .carousel-item figcaption h2 {
 }
 header .carousel-item .socal-links {
   position: relative;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
   flex: 1 0 auto;
 }
 header .carousel-item .socal-links .line {
@@ -270,8 +346,12 @@ header .carousel-item .socal-links .line {
 header .carousel-item .socal-links:after {
   content: attr(data-number);
   padding: 0.5em 1em;
-  transform: rotate(-90deg);
   display: inline-block;
+  -webkit-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 header .carousel-item .socal-links .list-group-item {
   background: none;
@@ -303,6 +383,10 @@ header .carousel-item .socal-links .btn span {
   height: 100%;
   line-height: 50px;
   color: #fff;
+  -webkit-transition: background 0.2s ease;
+  -o-transition: background 0.2s ease;
+  -moz-transition: background 0.2s ease;
+  -ms-transition: background 0.2s ease;
   transition: background 0.2s ease;
 }
 header .carousel-item .socal-links .btn:after {
@@ -319,6 +403,10 @@ header .carousel-item .socal-links .btn:after {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-transition: background 0.2s ease;
+  -o-transition: background 0.2s ease;
+  -moz-transition: background 0.2s ease;
+  -ms-transition: background 0.2s ease;
   transition: background 0.2s ease;
 }
 header .carousel-dota {
@@ -363,14 +451,21 @@ header .carousel-indicators li.active:after {
 /*======================
 ====== end header =======
 ======================*/
+/*======================
+====== start clients =======
+======================*/
 .clients .list-inline-item {
   padding: 0.5em 1em;
   color: rgba(26, 26, 29, 0.5);
-  transition: color 0.2s ease, border 0.2s ease;
   text-transform: uppercase;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: transparent;
+  -webkit-transition: color 0.2s ease, border 0.2s ease;
+  -o-transition: color 0.2s ease, border 0.2s ease;
+  -moz-transition: color 0.2s ease, border 0.2s ease;
+  -ms-transition: color 0.2s ease, border 0.2s ease;
+  transition: color 0.2s ease, border 0.2s ease;
 }
 .clients .list-inline-item:hover, .clients .list-inline-item.active {
   border-bottom-color: #1a1a1d;
@@ -390,6 +485,7 @@ header .carousel-indicators li.active:after {
 }
 .clients figure:hover figcaption {
   opacity: 1;
+  filter: alpha(opacity=100);
 }
 .clients figcaption {
   background-color: rgba(180, 211, 211, 0.5);
@@ -403,15 +499,26 @@ header .carousel-indicators li.active:after {
   text-align: right;
   padding: 1em;
   opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -ms-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
 }
 .clients .client-link {
   display: inline-block;
-  border-radius: 50%;
   background-color: #fff;
   color: #1a1a1d;
   padding: 8px 12px;
+  -webkit-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
 }
 .clients .client-title {
   text-align: center;
@@ -431,10 +538,18 @@ header .carousel-indicators li.active:after {
   margin: 0 auto;
   display: block;
   margin-top: 50px;
-  border-radius: 25px;
   padding: 0.5em 1em;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
 }
 
+/*======================
+====== end clients =======
+======================*/
+/*======================
+====== start forms style =======
+======================*/
 #search {
   position: relative;
 }
@@ -443,15 +558,33 @@ header .carousel-indicators li.active:after {
   padding: 0.5em;
   width: 100%;
   display: inline-block;
-  border-radius: 50px;
   position: relative;
   z-index: 9;
-  transform: scale(0, 1);
-  transform-origin: right;
   will-change: transform;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  -webkit-transform: scale(0, 1);
+  -o-transform: scale(0, 1);
+  -moz-transform: scale(0, 1);
+  -ms-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transform-origin: right;
+  -o-transform-origin: right;
+  -moz-transform-origin: right;
+  -ms-transform-origin: right;
+  transform-origin: right;
+  -webkit-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -ms-transition: transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
 }
 #search input.active {
+  -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
   transform: scale(1);
 }
 #search label {
@@ -465,78 +598,28 @@ header .carousel-indicators li.active:after {
   cursor: pointer;
 }
 
+/*======================
+====== end forms style =======
+======================*/
+/*======================
+====== start buttons style =======
+======================*/
 .btn-primary {
   color: #fff;
   background-color: #b4d3d3;
   border: none;
+  -webkit-transition: background 0.2s ease;
+  -o-transition: background 0.2s ease;
+  -moz-transition: background 0.2s ease;
+  -ms-transition: background 0.2s ease;
   transition: background 0.2s ease;
 }
 .btn-primary:hover {
   background-color: #1a1a1d;
 }
 
+/*======================
+====== end buttons style =======
+======================*/
 /* start media style */
-@media print {
-  * {
-    background: transparent !important;
-    color: black !important;
-    text-shadow: none !important;
-  }
-
-  @page {
-    margin: 0.5cm;
-  }
-  a, a:visited {
-    color: #444 !important;
-    text-decoration: underline;
-  }
-
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
-
-  a:after, a[href^="javascript:"]:after,
-a[href^="#"]:after {
-    content: "";
-  }
-
-  thead {
-    display: table-header-group;
-  }
-
-  tr, img {
-    page-break-inside: avoid;
-  }
-
-  p, h2, h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2, h3 {
-    page-break-after: avoid;
-  }
-
-  hr {
-    border-top: 1px solid #000 !important;
-    border-bottom: 0 !important;
-  }
-
-  .manu {
-    display: none;
-  }
-
-  .article {
-    width: 100%;
-    float: none;
-  }
-
-  .top-nav {
-    display: none;
-  }
-}
 /* end media style */
