--- a/css/sass/layout/_nav.scss
+++ b/css/sass/layout/_nav.scss
@@ -4,7 +4,7 @@
 nav
 {
 	width:65%;
-	flex: 0 0 65%;
+    @include flex(0, 0, 65%);
     height: 100%;
     .navbar-toggler
     {
@@ -21,30 +21,30 @@ nav
 		    display: block;
 		    background-color: rgba($text-color,0.5);
 		    margin: 4px 0;
-		    opacity: 1;
-		    transform: rotate(0) translate(0);
 	    	will-change:transform;
-	    	transition:transform 0.3s linear,opacity 0.3s ease;
+            @include opacity(1);
+            @include transform(rotate(0) translate(0));
+            @include transition(transform 0.3s linear,opacity 0.3s ease);
 		}
 		&[aria-expanded='true']
 		{
 			.toggler-icon
 			{
-				opacity: 0;
+                @include opacity(0);
 			}
 			&:before
 			{
-				transform: rotate(45deg) translate(3px, 4px);
+                @include transform(rotate(45deg) translate(3px, 4px));
 			}
 			&:after
 			{
-				transform: rotate(-45deg) translate(5px, -6px);
+                @include transform(rotate(-45deg) translate(5px, -6px));
 			}
 		}
     }
     .navbar-items
     {
-    	flex: 1 0 auto;
+        @include flex(1, 0, auto);
     }
     .nav-item
     {
@@ -53,7 +53,7 @@ nav
         font-size: 1rem;
         text-transform: uppercase;
         color: rgba($text-color,0.5);
-        transition:color 0.2s ease;
+        @include transition(color 0.2s ease);
         @extend %fontheading;
         &:hover
         {
@@ -67,13 +67,13 @@ nav
 	    top: 65px;
 	    left: auto;
 	    z-index: 999;
-    	box-shadow: 0px 0px 10px 2px rgba($text-color, 0.3);
-    	transform: scale(0);
     	will-change:transform;
-    	transition:transform 0.5s cubic-bezier(1, 2, 0, -0.5);
+        @include box-shadow(0px 0px 10px 2px rgba($text-color, 0.3));
+        @include scale(0);
+        @include transition(transform 0.5s cubic-bezier(1, 2, 0, -0.5));
     	&.show
     	{
-    		transform: scale(1);
+            @include scale(1);
     	}
     	.nav-item
     	{
