--- a/css/sass/components/_normalize.scss
+++ b/css/sass/components/_normalize.scss
@@ -1,11 +1,13 @@
 /*=== start default style */
-*
+*,
+*::before,
+*::after
 {
-    @include box-sizing();
     border: 0;
     outline: 0;
     margin:0;
     padding:0;
+    @include box-sizing();
 }
 img
 {
