--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,8 @@
 
 img {
   max-width: 100%;
+  width: 100%;
+  height: 100%;
   vertical-align: middle;
 }
 
@@ -653,6 +655,66 @@ header .carousel-indicators li.active:after {
 
 /*======================
 ====== end clients =======
+======================*/
+/*======================
+====== start stories =======
+======================*/
+.stories {
+  text-align: center;
+}
+.stories .title-h {
+  border-bottom: 1px solid;
+  padding-bottom: 1em;
+  text-align: center;
+  display: inline-block;
+}
+.stories .media {
+  margin-bottom: 10px;
+  height: 125px;
+  overflow: hidden;
+}
+.stories .media:hover h3 {
+  color: #c3dbdb;
+}
+.stories .media:hover figcaption {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.stories figure {
+  position: relative;
+  width: 30%;
+  height: 100%;
+}
+.stories figcaption {
+  display: inline-block;
+  background-color: #c3dbdb;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -ms-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.stories .time {
+  color: rgba(26, 26, 29, 0.5);
+  margin-top: 10px;
+  display: inline-block;
+  text-transform: capitalize;
+  font-size: 0.8rem;
+}
+
+/*======================
+====== end stories =======
 ======================*/
 /*======================
 ====== start forms style =======
