--- a/css/sass/layout/_nav.scss
+++ b/css/sass/layout/_nav.scss
@@ -9,7 +9,7 @@ nav
     .navbar-toggler
     {
     	width:50px;
-    	margin-right: 1em;
+    	margin-#{$right}: 1em;
     	border: none;
     	.toggler-icon,
     	&:before,
@@ -65,7 +65,7 @@ nav
         background-color: $white-color;
     	position: absolute;
 	    top: 65px;
-	    left: auto;
+	    #{$left}: auto;
 	    z-index: 999;
     	will-change:transform;
         @include box-shadow(0px 0px 10px 2px rgba($text-color, 0.3));
