--- a/css/sass/layout/main/_clients.scss
+++ b/css/sass/layout/main/_clients.scss
@@ -47,8 +47,8 @@
 		background-color: rgba($main-color2,0.5);
 	    position: absolute;
 	    top: 0;
-	    left: 0;
-	    right: 0;
+	    #{$left}: 0;
+	    #{$right}: 0;
 	    bottom: 0;
 	    height: 100%;
 	    width: 100%;
@@ -71,8 +71,8 @@
 		text-align: center;
 	    position: absolute;
 	    bottom: 0;
-	    left: 0;
-	    right: 0;
+	    #{$left}: 0;
+	    #{$right}: 0;
 	    top: auto;
 	    width: 100%;
 	    padding: 1em;
