--- a/css/sass/layout/main/_stories.scss
+++ b/css/sass/layout/main/_stories.scss
@@ -20,6 +20,9 @@
 	    {
 			h3
 			{
+				display: block;
+   				height: 75%;
+				overflow: hidden;
 				color:$main-color;
 			}
 			figcaption
@@ -41,14 +44,19 @@
 		color:$white-color;
 	    position: absolute;
 	    top: 0;
-	    left: 0;
 	    bottom: 0;
-	    right: 0;
+	    #{$left}: 0;
+	    #{$right}: 0;
 	    width: 100%;
 	    height: 100%;
 	    text-align: center;
 	    @include opacity(0);
     	@include transition(opacity 0.3s ease-in-out);
+	}
+	.media-body
+	{
+		position: relative;
+		height: 100%;
 	}
 	.time
 	{
@@ -57,6 +65,11 @@
 		display: inline-block;
 		text-transform: capitalize;
 		font-size: 0.8rem;
+		position: absolute;
+	    top: auto;
+	    bottom: 0;
+	    #{$left}: 0;
+	    #{$right}: 0;
 	}
 }
 /*======================
