--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ html, body {
   font-family: "Raleway", sans-serif;
 }
 
-header .carousel-item .socal-links:after, nav .nav-item, h1,
+.news .trending:before, header .carousel-item .socal-links:after, nav .nav-item, h1,
 h2,
 h3,
 h4,
@@ -65,6 +65,7 @@ h5,
 h6,
 .h-style {
   font-family: "Amaranth", sans-serif;
+  font-weight: bold;
 }
 
 html, body {
@@ -327,11 +328,11 @@ nav .navbar-collapse {
   -moz-transform: scale(0);
   -ms-transform: scale(0);
   transform: scale(0);
-  -webkit-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
-  -o-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
-  -moz-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
-  -ms-transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
-  transition: transform 0.5s cubic-bezier(1, 2, 0, -0.5);
+  -webkit-transition: transform 0.8s cubic-bezier(0.5, 1, 1, 1.5);
+  -o-transition: transform 0.8s cubic-bezier(0.5, 1, 1, 1.5);
+  -moz-transition: transform 0.8s cubic-bezier(0.5, 1, 1, 1.5);
+  -ms-transition: transform 0.8s cubic-bezier(0.5, 1, 1, 1.5);
+  transition: transform 0.8s cubic-bezier(0.5, 1, 1, 1.5);
 }
 nav .navbar-collapse.show {
   -webkit-transform: scale(1);
@@ -390,7 +391,7 @@ header .carousel-item {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9;
+  z-index: 8;
   height: 100%;
   -webkit-transform: translate(-100%);
   -o-transform: translate(-100%);
@@ -404,7 +405,7 @@ header .carousel-item {
   transition: transform 0.3s ease-in-out;
 }
 header .carousel-item.active {
-  z-index: 99;
+  z-index: 9;
   -webkit-transform: translate(0);
   -o-transform: translate(0);
   -moz-transform: translate(0);
@@ -423,10 +424,18 @@ header .carousel-item figure {
   position: relative;
   height: 100%;
   display: block;
+  background-color: #fff;
 }
 header .carousel-item figure img {
   width: 100%;
   height: 100%;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  -webkit-object-fit: cover;
+  -o-object-fit: cover;
+  -moz-object-fit: cover;
+  -ms-object-fit: cover;
+  object-fit: cover;
 }
 header .carousel-item figcaption {
   position: absolute;
@@ -586,7 +595,6 @@ header .carousel-indicators li.active:after {
   color: inherit;
 }
 .clients figure {
-  position: relative;
   margin: 0;
 }
 .clients figure img {
@@ -685,9 +693,7 @@ header .carousel-indicators li.active:after {
   filter: alpha(opacity=100);
 }
 .stories figure {
-  position: relative;
   width: 30%;
-  height: 100%;
 }
 .stories figcaption {
   display: inline-block;
@@ -713,7 +719,126 @@ header .carousel-indicators li.active:after {
   position: relative;
   height: 100%;
 }
-.stories .time {
+
+/*======================
+====== end stories =======
+======================*/
+.news img {
+  object-fit: cover;
+}
+.news .carousel,
+.news .carousel-inner {
+  min-height: 400px;
+  height: 100%;
+}
+.news .carousel-indicators {
+  bottom: 20%;
+}
+.news .carousel-indicators li {
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  cursor: pointer;
+  margin: 5px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.news .carousel-item {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 8;
+  height: 100%;
+  -webkit-transform: translate(-100%);
+  -o-transform: translate(-100%);
+  -moz-transform: translate(-100%);
+  -ms-transform: translate(-100%);
+  transform: translate(-100%);
+  -webkit-transition: transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  -moz-transition: transform 0.3s ease-in-out;
+  -ms-transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+}
+.news .carousel-item.active {
+  z-index: 9;
+  -webkit-transform: translate(0);
+  -o-transform: translate(0);
+  -moz-transform: translate(0);
+  -ms-transform: translate(0);
+  transform: translate(0);
+}
+.news .carousel-item.active ~ .carousel-item {
+  -webkit-transform: translate(100%);
+  -o-transform: translate(100%);
+  -moz-transform: translate(100%);
+  -ms-transform: translate(100%);
+  transform: translate(100%);
+}
+.news .carousel-item figure {
+  height: 100%;
+}
+.news .carousel-item figure img {
+  height: 85%;
+}
+.news .carousel-item figcaption {
+  height: 15%;
+  margin-top: 10px;
+  overflow: hidden;
+}
+.news .carousel-item .time {
+  position: static;
+}
+.news .trending {
+  position: relative;
+  min-height: 400px;
+  height: 400px;
+  height: 70vh;
+}
+.news .trending:before {
+  content: "trending";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #fff;
+  z-index: 999;
+  padding: 0.5em 1em;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  line-height: 1;
+}
+.news .trending figcaption {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  color: #fff;
+  background: #b4d3d3;
+  width: 30%;
+}
+.news .trending .time {
+  color: #fff;
+  left: auto;
+  right: auto;
+}
+.news .trending .trending-title {
+  position: absolute;
+  top: auto;
+  bottom: 1em;
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding: 1em;
+}
+
+figure {
+  position: relative;
+  height: 100%;
+}
+
+.time {
   color: rgba(26, 26, 29, 0.5);
   margin-top: 10px;
   display: inline-block;
@@ -726,9 +851,6 @@ header .carousel-indicators li.active:after {
   right: 0;
 }
 
-/*======================
-====== end stories =======
-======================*/
 /*======================
 ====== start forms style =======
 ======================*/
