--- a/css/sass/layout/_nav.scss
+++ b/css/sass/layout/_nav.scss
@@ -70,7 +70,7 @@ nav
     	will-change:transform;
         @include box-shadow(0px 0px 10px 2px rgba($text-color, 0.3));
         @include scale(0);
-        @include transition(transform 0.5s cubic-bezier(1, 2, 0, -0.5));
+        @include transition(transform 0.8s cubic-bezier(.5,1,1,1.5));
     	&.show
     	{
             @include scale(1);
