--- a/css/sass/layout/main/_news.scss
+++ b/css/sass/layout/main/_news.scss
@@ -1,72 +1,23 @@
+/*======================
+====== start news =======
+======================*/
 .news
 {
 	img
 	{
 		object-fit: cover;
 	}
-	.carousel,
-	.carousel-inner
-	{
-		min-height:400px;
-		height: 100%;
-	}
-	.carousel-indicators
-	{
-		bottom: 20%;
-		li
-		{
-			width: 15px;
-			height: 15px;
-			background-color: $white-color;
-			cursor: pointer;
-			margin: 5px;
-			@include border-radius(50%);
-		}	
-	}
-	.carousel-item
-	{
-		display: block;
-		position: absolute;
-	    top: 0;
-	    #{$left}: 0;
-	    z-index: 8;
-	    height: 100%;
-	    @include translate(-100%);
-	    @include transition(transform 0.3s ease-in-out);
-	    &.active
-	    {
-	    	z-index: 9;
-	   		@include translate(0);
-	    	& ~ .carousel-item
-	    	{
-	   			@include translate(100%);
-	    	}
-	    }
-		figure
-		{
-			height: 100%;
-			img
-			{
-				height: 85%;
-			}
-		}
-		figcaption
-		{
-			height: 15%;
-			margin-top: 10px;
-			overflow: hidden;
-		}
-		.time
-		{
-			position: static;
-		}
-	}
-	.trending
+	.trending,
+	.news-blog,
+	#blog-slider
 	{
 		position: relative;
 		min-height:400px;
 		height: 400px;
-		height: 70vh;
+		height: 40vh;
+	}
+	.trending
+	{
 		&:before
 		{
 			content: "trending";
@@ -107,5 +58,121 @@
 			width:100%;
 			padding: 1em;
 		}
-	}	
+	}
+	//slider	
+	.carousel,
+	.carousel-inner
+	{
+		height: 100%;
+	}
+	.carousel-indicators
+	{
+		bottom: 20%;
+		li
+		{
+			width: 15px;
+			height: 15px;
+			background-color: rgba($white-color, 0.5);
+			cursor: pointer;
+			margin: 5px;
+			@include border-radius(50%);
+			&.active,
+			&:hover
+			{
+				background-color: $white-color;
+			}
+		}	
+	}
+	.carousel-item
+	{
+		display: block;
+		position: absolute;
+	    top: 0;
+	    #{$left}: 0;
+	    z-index: 8;
+	    height: 100%;
+	    @include translate(-100%);
+	    @include transition(transform 0.3s ease-in-out);
+	    &.active
+	    {
+	    	z-index: 9;
+	   		@include translate(0);
+	    	& ~ .carousel-item
+	    	{
+	   			@include translate(100%);
+	    	}
+	    }
+	}
+	.carousel-item,
+	.news-blog
+	{
+		overflow: hidden;
+		figure
+		{
+			height: 100%;
+			img
+			{
+				height: 85%;
+			}
+		}
+		figcaption
+		{
+			height: 15%;
+			padding: 10px 0;
+			overflow: hidden;
+		}
+		.time
+		{
+			position: static;
+		}
+	}
+	.news-blog
+	{
+		figure
+		{
+			img
+			{
+				height: 75%;
+			}
+		}
+		figcaption
+		{
+			height: 25%;
+		}
+	}
+	#news-slider
+	{
+		min-height: 600px;
+		height:600px;
+		height:100%;
+	}
+	#blog-slider
+	{
+		.carousel-indicators
+		{
+			height: 100%;
+			top: 0;
+			bottom: 0;
+			left: auto;
+		}
+		img
+		{
+			height: 100%;
+		}
+		figcaption
+		{
+			position: absolute;
+			color: rgba($white-color, 0.7);
+			left: 20px;
+			bottom: 20px;
+			text-transform: uppercase;
+			font-size: 1.5em;
+			word-spacing: 5px;
+			padding: 10px 0;
+			overflow: hidden;
+		}
+	}
 }
+/*======================
+====== end news =======
+======================*/
