--- a/css/sass/media/media_mid/_max_768.scss
+++ b/css/sass/media/media_mid/_max_768.scss
@@ -1,4 +1,14 @@
 //media maxsize 768px
 @include media($max_mid)
 {
+	footer
+	{
+		text-align: center;
+		.news-letter,
+		.links
+		{
+			text-align: inherit;
+			margin-top:1em;
+		}
+	}
 }
